k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foot-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: foot.badr.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foot-service
            port:
              number: 80
  tls:
  - hosts:
    - foot.badr.cloud
    secretName: foot-tls-secret
